--- a/Main/generic.html
+++ b/Main/generic.html
@@ -15,26 +15,23 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/all.css" />
   </head>
 
   <body class="is-preload">
     <!-- Header -->
     <header id="header">
-      <a class="logo" href="index.html">Industrious</a>
-      <nav>
-        <a href="#menu">Menu</a>
+      <a class="logo" href="index.html">DSWORK LTDA</a>
+      <!-- Nav -->
+      <nav id="nav_menu">
+        <ul class="links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="news.html">Notícias</a></li>
+          <li><a href="client_area.html">Área do Cliente</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
       </nav>
     </header>
-
-    <!-- Nav -->
-    <nav id="menu">
-      <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">Notícias</a></li>
-        <li><a href="client_area.html">Área do Cliente</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
 
     <!-- Heading -->
     <div id="heading">
