--- a/Main/index.html
+++ b/Main/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!--
-	Industrious by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -15,26 +14,23 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/all.css" />
   </head>
 
   <body class="is-preload">
     <!-- Header -->
     <header id="header">
-      <a class="logo" href="index.html">DS WORK LTDA</a>
-      <nav>
-        <a href="#menu">Menu</a>
+      <a class="logo" href="index.html">DSWORK LTDA</a>
+      <!-- Nav -->
+      <nav id="nav_menu">
+        <ul class="links">
+          <li><a href="index.html" style="color: red">Home</a></li>
+          <li><a href="news.html">Notícias</a></li>
+          <li><a href="client_area.html">Área do Cliente</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
       </nav>
     </header>
-
-    <!-- Nav -->
-    <nav id="menu">
-      <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">Notícias</a></li>
-        <li><a href="client_area.html">Área do Cliente</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
 
     <!-- Banner -->
     <section id="banner">
@@ -58,7 +54,7 @@
           <section>
             <div class="content">
               <header>
-                <a href="boleto.html" class="icon fa-vcard-o"
+                <a href="client_area.html" class="icon fa-vcard-o"
                   ><span class="label">Icon</span></a
                 >
                 <h3>Área do Cliente</h3>
@@ -73,23 +69,20 @@
             <div class="content">
               <header>
                 <a
-                  href="https://api.whatsapp.com/send?phone=5521979553934"
+                  href="./news.html"
                   target="_blank"
-                  class="icon fa-whatsapp"
+                  class="icon fa-paper-plane-o"
                   ><span class="label">Icon</span></a
                 >
-                <h3>Precisa de ajuda?</h3>
+                <h3>Notícias</h3>
               </header>
-              <p>
-                Aqui te redirecionaremos para um de nossos atendentes para que
-                possa ajuda-lo da melhor forma possível
-              </p>
+              <p>Fique informado sobre as mais novas noticias da empresa</p>
             </div>
           </section>
           <section>
             <div class="content">
               <header>
-                <a href="#" class="icon fa-line-chart"
+                <a href="./contato.html" class="icon fa-line-chart"
                   ><span class="label">Icon</span></a
                 >
                 <h3>Consultoria</h3>
@@ -258,10 +251,10 @@
           <section>
             <h4>Seções do site</h4>
             <ul class="alt">
-              <li><a href="#">Administração</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">Nossos Clientes</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./news.html">Notícias</a></li>
+              <li><a href="./client_area.html">Área do Cliente</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </section>
           <section>
@@ -275,9 +268,6 @@
               </li>
               <li>
                 <a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-github">&nbsp;</i>Github</a>
               </li>
             </ul>
           </section>
