Added "ver mais " button + scroll down logic

--- a/Main/client_area.html
+++ b/Main/client_area.html
@@ -29,7 +29,9 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="news.html">Notícias</a></li>
           <li>
-            <a href="client_area.html" style="color: red">Área do Cliente</a>
+            <a href="client_area.html" style="color: #ce1b28"
+              >Área do Cliente</a
+            >
           </li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
