--- a/Main/contato.html
+++ b/Main/contato.html
@@ -29,7 +29,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="news.html">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
-          <li><a href="contato.html" style="color: red">Contato</a></li>
+          <li><a href="contato.html" style="color: #ce1b28">Contato</a></li>
         </ul>
       </nav>
     </header>
