--- a/Main/index.html
+++ b/Main/index.html
@@ -15,6 +15,7 @@
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/all.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
   </head>
 
   <body class="is-preload">
@@ -24,7 +25,7 @@
       <!-- Nav -->
       <nav id="nav_menu">
         <ul class="links">
-          <li><a href="index.html" style="color: red">Home</a></li>
+          <li><a href="index.html" style="color: #ce1b28">Home</a></li>
           <li><a href="news.html">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
           <li><a href="contato.html">Contato</a></li>
@@ -45,7 +46,9 @@
     <section class="wrapper">
       <div class="inner">
         <header class="special">
-          <h2>Facilidades do Site</h2>
+          <h3>Ver mais</h3>
+          <span class="seta-baixo" id="arrow"></span>
+          <h2 id="hl">Facilidades do Site</h2>
           <p>
             Site desenvolvido buscando uma maior satisfação para nosso cliente!
           </p>
@@ -292,5 +295,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
