--- a/Main/news.html
+++ b/Main/news.html
@@ -27,7 +27,7 @@
       <nav id="nav_menu">
         <ul class="links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="news.html" style="color: red">Notícias</a></li>
+          <li><a href="news.html" style="color: #ce1b28">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
@@ -45,7 +45,7 @@
         <div class="content">
           <!-- Noticia 1 -->
           <div class="news_box">
-            <img src="images/google-foto.png" /><!-- Diretório da imagem -->
+            <img src="images/news01.png" /><!-- Diretório da imagem -->
             <div class="news_text">
               <!-- Titulo -->
               <h2>Titulo</h2>
@@ -56,7 +56,7 @@
           <hr width="100%" />
           <!-- Noticia 2 -->
           <div class="news_box">
-            <img src="images/google-foto.png" />
+            <img src="images/news02.png" />
             <div class="news_text">
               <h2>Titulo</h2>
               <p>texto completo</p>
@@ -65,7 +65,7 @@
           <hr width="100%" />
           <!-- Noticia 3 -->
           <div class="news_box">
-            <img src="images/google-foto.png" />
+            <img src="images/news03.png" />
             <div class="news_text">
               <h2>Titulo</h2>
               <p>texto completo</p>
@@ -74,7 +74,7 @@
           <hr width="100%" />
           <!-- Noticia 4 -->
           <div class="news_box">
-            <img src="images/google-foto.png" />
+            <img src="images/news04.png" />
             <div class="news_text">
               <h2>Titulo</h2>
               <p>texto completo</p>
@@ -83,7 +83,7 @@
           <hr width="100%" />
           <!-- Noticia 5 -->
           <div class="news_box">
-            <img src="images/google-foto.png" />
+            <img src="images/news05.png" />
             <div class="news_text">
               <h2>Titulo</h2>
               <p>texto completo</p>
