--- a/Main/contato.html
+++ b/Main/contato.html
@@ -43,20 +43,17 @@
     <section id="main" class="wrapper">
       <div class="inner">
         <div class="content">
-          <form action="mail.php" method="POST" id="form">
-            <b>Email</b><br />
-            <input type="text" name="email" size="40" />
-            <p>
-              <b>Subject</b><br />
-              <input type="text" name="subject" size="40" />
-            </p>
-
-            <p>
-              <b>Message</b><br />
-              <textarea cols="40" rows="10" name="message"></textarea>
-            </p>
-
-            <p><input type="submit" value=" Send " /></p>
+          <form action="mailto:lucasbndv@gmail.com" method="POST" id="form" enctype=”multipart/form-data”>
+            <h2>Fale conosco</h2>
+            <label for="name">Nome</label>
+            <input type="text" name="name" size="40" />
+            <label for="email">Email</label>
+            <input type="email" name="email" size="40" />
+            <label for="subject">Assunto</label>
+            <input type="text" name="subject" size="40" />
+            <label for="message">Mensagem</label>
+            <textarea cols="40" rows="10" name="message"></textarea>
+            <input type="submit" value=" Enviar " class="primary" />
           </form>
 
           <div class="contact_info">
@@ -103,32 +100,26 @@
           <section>
             <h4>Seções do site</h4>
             <ul class="alt">
-              <li><a href="#">Adiministração</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">Nossos Clientes</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./news.html">Notícias</a></li>
+              <li><a href="./client_area.html">Área do Cliente</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </section>
           <section>
             <h4>Redes Sociais</h4>
             <ul class="plain">
               <li>
-                <a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-github">&nbsp;</i>Github</a>
+                <a
+                  href="https://www.facebook.com/DS-Work-ADM-e-Consultoria-111090494085157"
+                  ><i class="icon fa-facebook">&nbsp;</i>Facebook</a
+                >
               </li>
             </ul>
           </section>
         </div>
         <div class="copyright">
-          &copy; 2013 DS WORK LTDA. Photos
+          &copy; 2021 DS WORK LTDA. Photos
           <a href="https://unsplash.co">Unsplash</a>, Video
           <a href="https://coverr.co">Coverr</a>.
         </div>
