--- a/Main/index.html
+++ b/Main/index.html
@@ -264,13 +264,10 @@
             <h4>Redes Sociais</h4>
             <ul class="plain">
               <li>
-                <a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
+                <a
+                  href="https://www.facebook.com/DS-Work-ADM-e-Consultoria-111090494085157"
+                  ><i class="icon fa-facebook">&nbsp;</i>Facebook</a
+                >
               </li>
             </ul>
           </section>
