--- a/Main/news.html
+++ b/Main/news.html
@@ -112,32 +112,26 @@
           <section>
             <h4>Seções do site</h4>
             <ul class="alt">
-              <li><a href="#">Adiministração</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">Nossos Clientes</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./news.html">Notícias</a></li>
+              <li><a href="./client_area.html">Área do Cliente</a></li>
+              <li><a href="./contato.html">Contato</a></li>
             </ul>
           </section>
           <section>
             <h4>Redes Sociais</h4>
             <ul class="plain">
               <li>
-                <a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
-              </li>
-              <li>
-                <a href="#"><i class="icon fa-github">&nbsp;</i>Github</a>
+                <a
+                  href="https://www.facebook.com/DS-Work-ADM-e-Consultoria-111090494085157"
+                  ><i class="icon fa-facebook">&nbsp;</i>Facebook</a
+                >
               </li>
             </ul>
           </section>
         </div>
         <div class="copyright">
-          &copy; 2013 DS WORK LTDA. Photos
+          &copy; 2021 DS WORK LTDA. Photos
           <a href="https://unsplash.co">Unsplash</a>, Video
           <a href="https://coverr.co">Coverr</a>.
         </div>
