--- a/Main/contato.html
+++ b/Main/contato.html
@@ -43,7 +43,7 @@
     <section id="main" class="wrapper">
       <div class="inner">
         <div class="content">
-          <form action="mailto:lucasbndv@gmail.com" method="POST" id="form" enctype=”multipart/form-data”>
+          <form action="mailto:lucasbndv@gmail.com" method="GET" id="form" enctype=”multipart/form-data”>
             <h2>Fale conosco</h2>
             <label for="name">Nome</label>
             <input type="text" name="name" size="40" />
@@ -52,7 +52,7 @@
             <label for="subject">Assunto</label>
             <input type="text" name="subject" size="40" />
             <label for="message">Mensagem</label>
-            <textarea cols="40" rows="10" name="message"></textarea>
+            <textarea cols="40" rows="10" name="body"></textarea>
             <input type="submit" value=" Enviar " class="primary" />
           </form>
 
