Adding php functions ( admin page, news page, register_news page)

--- a/Main/index.html
+++ b/Main/index.html
@@ -11,8 +11,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content=" A Empresa conta com grande experiência do seu fundador.
+    Especializada nas áreas Administrativo-Financeira, Contabilidade e
+    Recursos Humanos, passou a desenvolver trabalho de consultoria
+    junto a empresas internacionais, condomínios e pequenas e médias
+    empresas. A DS WORK possui alto grau de informatização e
+    profissionais qualificados em outras áreas como Jurídica e
+    Comunicação."
+    />
+    <meta name="keywords" content="Administração" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/all.css" />
     <link rel="stylesheet" href="assets/css/index.css" />
@@ -26,7 +35,7 @@
       <nav id="nav_menu">
         <ul class="links">
           <li><a href="index.html" style="color: #ce1b28">Home</a></li>
-          <li><a href="news.html">Notícias</a></li>
+          <li><a href="news.php">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
@@ -71,10 +80,7 @@
           <section>
             <div class="content">
               <header>
-                <a
-                  href="./news.html"
-                  target="_blank"
-                  class="icon fa-paper-plane-o"
+                <a href="./news.html" class="icon fa-paper-plane-o"
                   ><span class="label">Icon</span></a
                 >
                 <h3>Notícias</h3>
@@ -281,17 +287,16 @@
     </footer>
 
     <!-- Scripts -->
-
-    <script src="assets/js/callus.js"></script>
-    <script
-      src="https://dswork-mybr.3cx.net/join/dswork"
-      id="tcx-callus-js"
-    ></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="./assets/js/index.js"></script>
+    <script src="assets/js/callus.js"></script>
+    <script
+      src="https://dswork-mybr.3cx.net/join/dswork"
+      id="tcx-callus-js"
+    ></script>
   </body>
 </html>
