--- a/Main/acount_register.html
+++ b/Main/acount_register.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Área do Cliente - DS WORK LTDA</title>
+    <title>Generic Page - Industrious by TEMPLATED</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -15,7 +15,6 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/client_area.css" />
     <link rel="stylesheet" href="assets/css/all.css" />
   </head>
 
@@ -27,12 +26,8 @@
       <nav id="nav_menu">
         <ul class="links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="news.php">Notícias</a></li>
-          <li>
-            <a href="client_area.html" style="color: #ce1b28"
-              >Área do Cliente</a
-            >
-          </li>
+          <li><a href="news.html">Notícias</a></li>
+          <li><a href="client_area.html">Área do Cliente</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
@@ -40,19 +35,13 @@
 
     <!-- Heading -->
     <div id="heading">
-      <h1>Área do Cliente</h1>
+      <h1>Generic Page</h1>
     </div>
 
     <!-- Main -->
     <section id="main" class="wrapper">
       <div class="inner">
-        <div class="content">
-          <iframe
-            src="http://www.immobileweb.com.br/login/dswork"
-            width="100%"
-            height="500"
-          ></iframe>
-        </div>
+        <div class="content"></div>
       </div>
     </section>
 
@@ -75,26 +64,32 @@
           <section>
             <h4>Seções do site</h4>
             <ul class="alt">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./news.html">Notícias</a></li>
-              <li><a href="./client_area.html">Área do Cliente</a></li>
-              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="#">Adiministração</a></li>
+              <li><a href="#">Serviços</a></li>
+              <li><a href="#">Nossos Clientes</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
           </section>
           <section>
             <h4>Redes Sociais</h4>
             <ul class="plain">
               <li>
-                <a
-                  href="https://www.facebook.com/DS-Work-ADM-e-Consultoria-111090494085157"
-                  ><i class="icon fa-facebook">&nbsp;</i>Facebook</a
-                >
+                <a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a>
+              </li>
+              <li>
+                <a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a>
+              </li>
+              <li>
+                <a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a>
+              </li>
+              <li>
+                <a href="#"><i class="icon fa-github">&nbsp;</i>Github</a>
               </li>
             </ul>
           </section>
         </div>
         <div class="copyright">
-          &copy; 2021 DS WORK LTDA. Photos
+          &copy; 2013 DS WORK LTDA. Photos
           <a href="https://unsplash.co">Unsplash</a>, Video
           <a href="https://coverr.co">Coverr</a>.
         </div>
