--- a/Main/client_area.html
+++ b/Main/client_area.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!--
-	Industrious by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
@@ -33,7 +32,7 @@
               >Área do Cliente</a
             >
           </li>
-          <li><a href="contato.html">Contato</a></li>
+          <li><a href="contact.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -76,9 +75,9 @@
             <h4>Seções do site</h4>
             <ul class="alt">
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./news.html">Notícias</a></li>
+              <li><a href="./news.php">Notícias</a></li>
               <li><a href="./client_area.html">Área do Cliente</a></li>
-              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./contact.html">Contato</a></li>
             </ul>
           </section>
           <section>
