--- a/Main/contact.html
+++ b/Main/contact.html
@@ -29,7 +29,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="news.php">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
-          <li><a href="contato.html" style="color: #ce1b28">Contato</a></li>
+          <li><a href="contact.html" style="color: #ce1b28">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -101,9 +101,9 @@
             <h4>Seções do site</h4>
             <ul class="alt">
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./news.html">Notícias</a></li>
+              <li><a href="./news.php">Notícias</a></li>
               <li><a href="./client_area.html">Área do Cliente</a></li>
-              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./contact.html">Contato</a></li>
             </ul>
           </section>
           <section>
