--- a/Main/index.html
+++ b/Main/index.html
@@ -37,7 +37,7 @@
           <li><a href="index.html" style="color: #ce1b28">Home</a></li>
           <li><a href="news.php">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
-          <li><a href="contact.html">Contato</a></li>
+          <li><a href="contact.php">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -66,6 +66,17 @@
           <section>
             <div class="content">
               <header>
+                <a href="./news.php" class="icon fa-paper-plane-o"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>Notícias</h3>
+              </header>
+              <p>Fique informado sobre as mais novas noticias da empresa</p>
+            </div>
+          </section>
+          <section>
+            <div class="content">
+              <header>
                 <a href="client_area.html" class="icon fa-vcard-o"
                   ><span class="label">Icon</span></a
                 >
@@ -80,18 +91,7 @@
           <section>
             <div class="content">
               <header>
-                <a href="./news.html" class="icon fa-paper-plane-o"
-                  ><span class="label">Icon</span></a
-                >
-                <h3>Notícias</h3>
-              </header>
-              <p>Fique informado sobre as mais novas noticias da empresa</p>
-            </div>
-          </section>
-          <section>
-            <div class="content">
-              <header>
-                <a href="./contato.html" class="icon fa-line-chart"
+                <a href="./contact.php" class="icon fa-line-chart"
                   ><span class="label">Icon</span></a
                 >
                 <h3>Consultoria</h3>
@@ -132,10 +132,7 @@
           <section>
             <div class="content">
               <blockquote>
-                <p>
-                  Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
-                  gravida odio porttitor sem non mi integer non faucibus.
-                </p>
+                <p>AAA.</p>
               </blockquote>
               <div class="author">
                 <div class="image">
@@ -150,10 +147,7 @@
           <section>
             <div class="content">
               <blockquote>
-                <p>
-                  Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
-                  gravida odio porttitor sem non mi integer non faucibus.
-                </p>
+                <p>BBB</p>
               </blockquote>
               <div class="author">
                 <div class="image">
@@ -168,10 +162,7 @@
           <section>
             <div class="content">
               <blockquote>
-                <p>
-                  Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing
-                  gravida odio porttitor sem non mi integer non faucibus.
-                </p>
+                <p>CCC</p>
               </blockquote>
               <div class="author">
                 <div class="image">
@@ -263,7 +254,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./news.php">Notícias</a></li>
               <li><a href="./client_area.html">Área do Cliente</a></li>
-              <li><a href="./contact.html">Contato</a></li>
+              <li><a href="./contact.php">Contato</a></li>
             </ul>
           </section>
           <section>
@@ -281,7 +272,7 @@
         <div class="copyright">
           &copy; 2021 DS WORK LTDA. Photos
           <a href="https://unsplash.co">Unsplash</a>, Video
-          <a href="https://coverr.co">Coverr</a>.
+          <a href="https://coverr.co">Coverr</a>, Template by templated.co.
         </div>
       </div>
     </footer>
