--- a/Main/client_area.html
+++ b/Main/client_area.html
@@ -32,7 +32,7 @@
               >Área do Cliente</a
             >
           </li>
-          <li><a href="contact.html">Contato</a></li>
+          <li><a href="contact.php">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -77,7 +77,7 @@
               <li><a href="./index.html">Home</a></li>
               <li><a href="./news.php">Notícias</a></li>
               <li><a href="./client_area.html">Área do Cliente</a></li>
-              <li><a href="./contact.html">Contato</a></li>
+              <li><a href="./contact.php">Contato</a></li>
             </ul>
           </section>
           <section>
@@ -95,7 +95,7 @@
         <div class="copyright">
           &copy; 2021 DS WORK LTDA. Photos
           <a href="https://unsplash.co">Unsplash</a>, Video
-          <a href="https://coverr.co">Coverr</a>.
+          <a href="https://coverr.co">Coverr</a>, Template by templated.co.
         </div>
       </div>
     </footer>
