Changing the secondary color to blue

--- a/Main/index.html
+++ b/Main/index.html
@@ -34,7 +34,7 @@
       <!-- Nav -->
       <nav id="nav_menu">
         <ul class="links">
-          <li><a href="index.html" style="color: #ce1b28">Home</a></li>
+          <li><a href="index.html" style="color: #5674b6">Home</a></li>
           <li><a href="news.php">Notícias</a></li>
           <li><a href="client_area.html">Área do Cliente</a></li>
           <li><a href="contact.php">Contato</a></li>
