--- a/Main/client_area.html
+++ b/Main/client_area.html
@@ -28,7 +28,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="news.php">Notícias</a></li>
           <li>
-            <a href="client_area.html" style="color: #ce1b28"
+            <a href="client_area.html" style="color: #5674b6"
               >Área do Cliente</a
             >
           </li>
